# raymond

./: .gitignore  Cargo.toml  README.md  gitlab-ci.yml  rustfmt.toml  trace-config.json  trace-config.ron
assets/meshes/: cube.ply  ico_sphere.ply  suzanne.ply  suzanne_flat.ply
assets/scenes/dragon_room/: scene.json
assets/scenes/dragon_room_dim/: scene.json
assets/scenes/dragon_room_lit/: scene.json
assets/scenes/furnace_test/: scene.json
azul-editor/: Cargo.toml
azul-editor/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs  watch.rs
cli_old/: Cargo.toml
cli_old/src/: main.rs
client/: Cargo.toml
core/: Cargo.toml  build.rs
core/gpu/: bbox_intersect.fut
core/src/: lib.rs  math.rs  project.rs  scene.rs  tile.rs  transform.rs
core/src/geometry/: acc_grid.rs  mesh.rs  mod.rs
core/src/geometry/primitives/: mod.rs  plane.rs  sphere.rs  triangle.rs  vertex.rs
core/src/primitives/: aabb.rs  hit.rs  mod.rs  plane.rs  ray.rs  sphere.rs  triangle.rs  vertex.rs
core/src/scene/: mod.rs
core/src/settings/: mod.rs
core/tests/: scene_load_and_store.rs
core/tests/resources/basic_scene/: scene.json  scene.ron
editor/: main.js  package-lock.json  package.json  renderer.js  webpack.config.js
editor/frontend/: Cargo.toml  Makefile.toml
editor/frontend/src/: lib.rs
editor/src/: main.js  renderer.js
editor/templates/: test.vue
raymond-core/: .gitignore  Cargo.toml
raymond-core/benches/: acc_grid.rs  scenes.rs
raymond-core/src/: lib.rs  math.rs  project.rs  scene.rs  trace.rs
raymond-core/src/brdf/: cook_torrance.rs  mod.rs
raymond-core/src/geometry/: acc_grid.rs  mesh.rs  mod.rs
raymond-core/src/geometry/primitives/: mod.rs  plane.rs  sphere.rs  triangle.rs
raymond-editor/: .gitignore  package.json  tsconfig.json  webpack.config.js
raymond-editor/build-main/: client.js  main.js
raymond-editor/build-main/modules/: constants.js
raymond-editor/public/: index.html
raymond-editor/src/: client.tsx  main.ts
raymond-editor/src/model/: index.ts  plane.tsx  scene.ts  sphere.tsx
raymond-editor/src/model/cgmath/: Vector3.ts  index.ts
raymond-editor/src/modules/: constants.ts
server/: Cargo.toml
server/src/: main.rs  protocol.rs
src/: acc_grid.rs  lib.rs  main.rs  material.rs  mesh.rs  primitives.rs  raytracer.rs  scene.rs  trace.rs  transform.rs
src/raytracer/: acc_grid.rs  material.rs  mesh.rs  mod.rs  primitives.rs  raytracer.rs  scene.rs
visualisations/: Cargo.toml
visualisations/src/: main.rs
visualisations/src/plots/: mod.rs  rays.rs
