[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nyrox <root@nyrox.tech>"]
edition="2018"

[dependencies]
cgmath={version="0.17", features=["serde"]}
image="*"
num-traits="*"
rand="0.6"
crossbeam-utils="0.8.x"
crossbeam="0.8.x"
num_cpus="*"
serde="*"
serde_json="*"
serde_derive="*"
futures="*"
derive_builder="*"
simplelog="*"
log="*"

core={path="./core"}

[workspace]
members=[
	"cli",
	"core",
	"cli_old",
	"core/bbox_intersect",
]
exclude=[
	"editor\\frontend"
]
