[package]
name = "core"
version = "0.1.0"
authors = ["Mark Junge <mark.oliver@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath={version="0.17", features=["serde"]}
serde="1.0"
serde_derive="1.0"
ron="0.5.1"
num_cpus="*"

[dev-dependencies]