[package]
name = "core"
version = "0.1.0"
authors = ["Mark Junge <mark.oliver@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath={version="0.17", features=["serde"]}
rand="0.6"
crossbeam="0.5.0"
crossbeam-utils="0.5.0"
serde="1"
serde_derive="1"
serde_json="1"
log="0.4.8"
bbox_intersect={ path="./bbox_intersect", default-features=false, features=["opencl"] }

[build-dependencies]
genfut={ path="../../../../genfut", default-features=false, features=["opencl"] }

