[package]
name = "raymond-core"
version = "0.1.0"
authors = ["Mark Junge <mark.oliver@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath={version="0.18", features=["serde"]}
rand="0.6"
crossbeam="0.8"
crossbeam-utils="0.8"
serde="1"
serde_derive="1"
serde_json="1"
log="0.4.8"
num_cpus="*"

[dev-dependencies]
criterion = { version ="0.3", features=["html_reports"] }

[[bench]]
name = "acc_grid"
harness = false

[[bench]]
name="scenes"
harness=false