[package]
name = "editor-frontend"
version = "0.1.0"
authors = ["Nyrox <root@nyrox.tech>"]

[lib]
crate-type = ["cdylib"]

[build]
target="wasm32-unknown-unknown"

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = {version="0.2", features=["nightly"]}
js-sys="*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.1", optional = true }


[dependencies.web-sys]
version="0.3"
features=[
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"console",
	"HtmlCanvasElement",
	"WebGl2RenderingContext"
]